Add dynamic map getting from the server
Remove a useless setting
Add info on currentImage which is now automatically fetched from internet
Add request dependency
Reformat code in multiple functions to upgrade readibility (still ugly)
Change zplace.png template which is now 700x500

--- a/config.json
+++ b/config.json
@@ -5,8 +5,7 @@
   "__placing": "If false it will only check the price of pixels, it should be use to estimate total price printed at the end of the lines",
   "imagePath": "zplace.png",
   "__imagePath": "The image to print, with the extension .png, jpg is not supported",
-  "fixedColor": false,
-  "__fixedColor": "It will get a dynamic color if false, may be not very accurate",
-  "currentImage": "1662757015040.png",
-  "__currentImage": "This can be used to economize the number of pixels change because it will verify if the pixel is already in the right color, if you having trouble with it remove it and leave it blank. Warning if enable it can eat your RAM and take long time to load"
+  "currentImage": "map.png",
+  "__currentImage": "This can be used to economize the number of pixels change because it will verify if the pixel is already in the right color, if you having trouble with it remove it and leave it blank. Warning if enable it can eat your RAM and take long time to load",
+  "___currentImage": "map.png is automatically fetched from the server, if you want to use your own image, you can put it in the same folder as the script and change the name here"
 }
